[package]
name = "redis_logger"
version = "0.2.1"
edition = "2018"
description = "A logger implementing the log::Log trait that writes log messages to a Redis pub/sub channel, a stream or both using the redis_rs crate"
repository = "https://github.com/8192K/redis_logger"
authors = ["Sebastian Frehmel <8192K@sebastianfrehmel.de>"]
license = "MIT/Apache-2.0"
categories = ["development-tools", "development-tools::debugging", "database"]
keywords = ["log", "logger", "logging", "redis", "pubsub"]
readme = "README.md"

[dependencies]
log = { version = "0.4" , features = ["std"] }
redis = "0.24"
thiserror = "1.0"
serde_json = { version="1.0", optional = true }

[dev-dependencies]
mockall = "0.12"

[features]
default_encoders = ["dep:serde_json"]

[profile.release]
lto = true
codegen-units = 1